==> HUSTerRail/Encoder_reader/bsp/gd32/arm/libraries/gd32_drivers/drv_pwm.c <==
#include <board.h>
#include "pwm_config.h"
#define DBG_TAG "drv.pwm"
#define DBG_LVL DBG_INFO
#include <rtdbg.h>
#define MAX_PERIOD  65535
#define MIN_PERIOD  3
#define MIN_PULSE   2

static rt_err_t drv_pwm_enable(uint32_t timer_periph, struct rt_pwm_configuration *configuration, rt_bool_t enable)
{
    uint16_t channel = configuration->channel - 1;  /* TIMER_CH_0 ~ TIMER_CH_3 */
    timer_channel_output_state_config(timer_periph, channel, (enable) ? TIMER_CCX_ENABLE : TIMER_CCX_DISABLE);

    return RT_EOK;
}

static rt_err_t drv_pwm_get(uint32_t timer_periph, struct rt_pwm_configuration *configuration)
{
    uint32_t tim_clock = SystemCoreClock;   /* 适用于 APB1=AHB/2  APB2=AHB/1 */

    /* Convert nanosecond to frequency and duty cycle. 1s = 1 * 1000 * 1000 * 1000 ns */
    tim_clock /= 1000000UL;
    configuration->period = (TIMER_CAR(timer_periph) + 1) * (TIMER_PSC(timer_periph) + 1) * 1000UL / tim_clock;
    configuration->pulse = (REG32((timer_periph) + 0x34U + (configuration->channel - 1) * 4) + 1) * (TIMER_PSC(timer_periph) + 1) * 1000UL / tim_clock;

    return RT_EOK;
}

static rt_err_t drv_pwm_set(uint32_t timer_periph, struct rt_pwm_configuration *configuration)
{
    uint32_t tim_clock = SystemCoreClock;    /* 适用于 APB1=AHB/2  APB2=AHB/1 */
    uint32_t period, pulse, psc;

    /* Convert nanosecond to frequency and duty cycle. 1s = 1 * 1000 * 1000 * 1000 ns */
    tim_clock /= 1000000UL;
    period = (unsigned long long)configuration->period * tim_clock / 1000ULL;
    psc = period / MAX_PERIOD + 1;  /* 计算最小分频 */
    period = period / psc;
    timer_prescaler_config(timer_periph, psc - 1, TIMER_PSC_RELOAD_UPDATE);

    if (period < MIN_PERIOD)
        period = MIN_PERIOD;
    timer_autoreload_value_config(timer_periph, period - 1);

    pulse = (unsigned long long)configuration->pulse * tim_clock / psc / 1000ULL;
    if (pulse < MIN_PULSE)
    {
        pulse = MIN_PULSE;
    }
    else if (pulse > period)
    {
        pulse = period;
    }
    timer_channel_output_pulse_value_config(timer_periph, configuration->channel - 1, pulse - 1);
    timer_counter_value_config(timer_periph, 0);

    timer_event_software_generate(timer_periph, TIMER_EVENT_SRC_UPG);

    return RT_EOK;
}

static rt_err_t drv_pwm_control(struct rt_device_pwm *device, int cmd, void *arg)
{
    RT_ASSERT(device != RT_NULL);
    RT_ASSERT(arg != RT_NULL);

    struct rt_pwm_configuration *configuration = (struct rt_pwm_configuration *)arg;
    gd32_pwm_device *pwm_dev = rt_container_of(device, gd32_pwm_device, device);

    switch (cmd)
    {
    case PWM_CMD_ENABLE:
        return drv_pwm_enable(pwm_dev->timer_periph, configuration, RT_TRUE);
    case PWM_CMD_DISABLE:
        return drv_pwm_enable(pwm_dev->timer_periph, configuration, RT_FALSE);
    case PWM_CMD_SET:
        return drv_pwm_set(pwm_dev->timer_periph, configuration);
    case PWM_CMD_GET:
        return drv_pwm_get(pwm_dev->timer_periph, configuration);
    default:
        return RT_EINVAL;
    }
}
